# mnemos

./: .gitignore  .mnemos.toml  GEMINI.md  README.md  config.py  init.py  pyproject.toml
.agent/skills/mnemos/: SKILL.md
.agent/workflows/: compress-memory.md  session-start.md  update-memory.md
.memory/: long_term.md  short_term.md
memory/: long_term.md  short_term.md
mnemos/: __init__.py  cli.py  compress.py  config.py  doctor.py  git.py  memory.py  search.py
skills/: __init__.py  compress_memory.py  read_memory.py  summarize_commits.py  write_long_term.py
templates/: .mnemos.toml
templates/.agent/skills/: SKILL.md
templates/.agent/skills/mnemos/: SKILL.md
templates/.memory/: long_term.md  short_term.md
tests/: test_cli.py  test_doctor.py  test_git.py  test_memory.py  test_search.py
